src/main/java/com/example/backendtest/modules/tarefa/errors/TarefaAlredyAlocate.java
package com.example.backendtest.modules.tarefa.errors;

import com.example.backendtest.errors.BadRequest;

public class TarefaAlredyAlocate extends BadRequest {
    public TarefaAlredyAlocate() {
        super("Tarefa jรก foi alocada");
    }
}
